# redirector

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.nix/: home-module.nix
benches/: divan.rs  my_benchmark.rs
src/: bang.rs  cli.rs  config.rs  lib.rs  main.rs
tests/: test.rs
