[package]
name = "redirector"
version = "0.6.0"
edition = "2024"
description = "A simple URL redirector"

[dependencies]
anyhow = "1.0"
axum = "0.8.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1.3"
parking_lot = "0.12.3"
heck = "0.5.0"
memchr = "2.7.4"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
divan = "0.1.17"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "divan"
harness = false
